--- a/static/result.html
+++ b/static/result.html
@@ -26,7 +26,6 @@
     <button onclick="onInvertClick()" class="self-center blue hover">[invert]</button>
     <script>
         function onInvertClick() {
-            const test = "sadasd"
             document.body.classList.toggle('inverted')
             window.localStorage.setItem("prefers-color-scheme", document.body.classList.contains("inverted") ? "light" : "dark")
         }
@@ -39,92 +38,99 @@
             document.body.classList.add('inverted')
         }
     </script>
-    <div class="self-center flex flex-col w-[90%] p-4 mt-8">
-        <div>
-            <p class="grey texm-sm text-left"><span>/* variant:</span> {{variant}} */</p>
-            <p class="grey texm-sm text-left mb-6"><span>/* author:</span> {{name}} */</p>
-        </div>
-        <div>
-            <h2 class="grey mb-4">/* comment */</h2>
-            <pre class="bg-dark-gray p-4 rounded-lg overflow-x-auto mb-4">
+    <div class="self-center flex flex-wrap gap-8 w-full max-w-screen-xl p-4 mt-8">
+        <div class="flex-1 min-w-[300px] max-w-[50%] mt-6">
+            <div>
+                <div>
+                    <p class="grey texm-sm text-left"><span>/* variant:</span> {{variant}} */</p>
+                    <p class="grey texm-sm text-left mb-6"><span>/* author:</span> {{name}} */</p>
+                </div>
+                <div>
+                    <h2 class="grey mb-4">/* comment */</h2>
+                    <pre class="bg-dark-gray p-4 rounded-lg overflow-x-auto mb-4">
 {{comment}}</pre>
-        </div>
+                </div>
 
-        <div>
-            <h2 class="grey mt-6 mb-4">/* assembler_code */</h2>
-            <pre class="bg-dark-gray p-4 rounded-lg overflow-x-auto mb-4">
+                <div>
+                    <h2 class="grey mt-6 mb-4">/* assembler_code */</h2>
+                    <pre class="bg-dark-gray p-4 rounded-lg overflow-x-auto mb-4">
 {{assembler_code}}</pre>
-        </div>
+                </div>
 
-        <div>
-            <h2 class="grey mt-6 mb-4">
-                /* simulation_config (YAML) */
-            </h2>
-            <pre class="bg-dark-gray p-4 rounded-lg overflow-x-auto mb-4">
+                <div>
+                    <h2 class="grey mt-6 mb-4">
+                        /* simulation_config (YAML) */
+                    </h2>
+                    <pre class="bg-dark-gray p-4 rounded-lg overflow-x-auto mb-4">
 {{yaml_content}}</pre>
-        </div>
-
-        <div>
-            <h2 class="grey mt-6 mb-4">/* simulation_result */</h2>
-            <pre class="bg-dark-gray p-4 rounded-lg overflow-x-auto mb-4">
-{{status}}</pre>
-        </div>
-
-        <div id="accordion-collapse-simulation-log" data-accordion="collapse" class="mb-4 bg-dark-gray p-4 rounded-lg"
-            data-inactive-classes="vim-folded orange-low-saturation" data-active-classes="white bg-transparent">
-            <h2 id="accordion-collapse-heading-1"
-                class="vim-folded orange-low-saturation flex items-center justify-between w-full text-left hover"
-                data-accordion-target="#accordion-collapse-body-1" aria-expanded="false"
-                aria-controls="accordion-collapse-body-1">
-                <span class="noselect">simulation_log =</span>
-            </h2>
-            <div id="accordion-collapse-body-1" class="hidden" aria-labelledby="accordion-collapse-heading-1">
-                <pre id="simulation-log-text-element" class="overflow-x-auto ">
-{{result}}</pre>
+                </div>
             </div>
         </div>
-        <div id="simulation-log-empty-tag" class="hidden mb-4 bg-dark-gray p-4 rounded-lg">simulation_log = ""
-            <span class="grey"> /* nothing returned */</span>
-        </div>
+        <div class="flex-1 min-w-[300px] max-w-[50%]">
 
-        <h2 class="grey mt-6 mb-4">/* testcase_result */</h2>
-        <pre class="bg-dark-gray p-4 rounded-lg overflow-x-auto mb-4">
+            <div>
+                <h2 class="grey mt-6 mb-4">/* simulation_result */</h2>
+                <pre class="bg-dark-gray p-4 rounded-lg overflow-x-auto mb-4">
+{{status}}</pre>
+            </div>
+
+            <div id="accordion-collapse-simulation-log" data-accordion="collapse"
+                class="mb-4 bg-dark-gray p-4 rounded-lg" data-inactive-classes="vim-folded orange-low-saturation"
+                data-active-classes="white bg-transparent">
+                <h2 id="accordion-collapse-heading-1"
+                    class="vim-folded orange-low-saturation flex items-center justify-between w-full text-left hover"
+                    data-accordion-target="#accordion-collapse-body-1" aria-expanded="false"
+                    aria-controls="accordion-collapse-body-1">
+                    <span class="noselect">simulation_log =</span>
+                </h2>
+                <div id="accordion-collapse-body-1" class="hidden" aria-labelledby="accordion-collapse-heading-1">
+                    <pre id="simulation-log-text-element" class="overflow-x-auto ">
+{{result}}</pre>
+                </div>
+            </div>
+            <div id="simulation-log-empty-tag" class="hidden mb-4 bg-dark-gray p-4 rounded-lg">simulation_log = ""
+                <span class="grey"> /* nothing returned */</span>
+            </div>
+
+            <h2 class="grey mt-6 mb-4">/* testcase_result */</h2>
+            <pre class="bg-dark-gray p-4 rounded-lg overflow-x-auto mb-4">
 {{test_cases_status}}</pre>
 
-        <div id="accordion-collapse-test-cases-result" data-accordion="collapse"
-            class="mb-4 bg-dark-gray p-4 rounded-lg" data-inactive-classes="vim-folded orange-low-saturation"
-            data-active-classes="white bg-transparent">
+            <div id="accordion-collapse-test-cases-result" data-accordion="collapse"
+                class="mb-4 bg-dark-gray p-4 rounded-lg" data-inactive-classes="vim-folded orange-low-saturation"
+                data-active-classes="white bg-transparent">
 
-            <h2 id="accordion-collapse-heading-2"
-                class="vim-folded flex orange-low-saturation items-center justify-between w-full text-left hover"
-                data-accordion-target="#accordion-collapse-body-2" aria-expanded="false"
-                aria-controls="accordion-collapse-body-2">
-                <span class="noselect">failed_test_case =</span>
-            </h2>
-            <div id="accordion-collapse-body-2" class="hidden" aria-labelledby="accordion-collapse-heading-2">
-                <pre id="test_cases_result-text-element" class="overflow-x-auto">
+                <h2 id="accordion-collapse-heading-2"
+                    class="vim-folded flex orange-low-saturation items-center justify-between w-full text-left hover"
+                    data-accordion-target="#accordion-collapse-body-2" aria-expanded="false"
+                    aria-controls="accordion-collapse-body-2">
+                    <span class="noselect">failed_test_case =</span>
+                </h2>
+                <div id="accordion-collapse-body-2" class="hidden" aria-labelledby="accordion-collapse-heading-2">
+                    <pre id="test_cases_result-text-element" class="overflow-x-auto">
 {{test_cases_result}}</pre>
+                </div>
             </div>
-        </div>
-        <div id="test-cases-result-empty-tag" class="hidden mb-4 bg-dark-gray p-4 rounded-lg">failed_test_case = ""
-            <span class="grey"> /* nothing returned */</span>
-        </div>
-        <div id="accordion-collapse-dump" data-accordion="collapse" class="mb-4 bg-dark-gray p-4 rounded-lg"
-            data-inactive-classes="vim-folded orange-low-saturation" data-active-classes="white bg-transparent">
+            <div id="test-cases-result-empty-tag" class="hidden mb-4 bg-dark-gray p-4 rounded-lg">failed_test_case = ""
+                <span class="grey"> /* nothing returned */</span>
+            </div>
+            <div id="accordion-collapse-dump" data-accordion="collapse" class="mb-4 bg-dark-gray p-4 rounded-lg"
+                data-inactive-classes="vim-folded orange-low-saturation" data-active-classes="white bg-transparent">
 
-            <h2 id="accordion-collapse-heading-3"
-                class="orange-low-saturation vim-folded flex items-center justify-between w-full text-left hover"
-                data-accordion-target="#accordion-collapse-body-3" aria-expanded="false"
-                aria-controls="accordion-collapse-body-3">
-                <span class="noselect">dump =</span>
-            </h2>
-            <div id="accordion-collapse-body-3" class="hidden" aria-labelledby="accordion-collapse-heading-3">
-                <pre id="dump-text-element" class="rounded-lg overflow-x-auto ">
+                <h2 id="accordion-collapse-heading-3"
+                    class="orange-low-saturation vim-folded flex items-center justify-between w-full text-left hover"
+                    data-accordion-target="#accordion-collapse-body-3" aria-expanded="false"
+                    aria-controls="accordion-collapse-body-3">
+                    <span class="noselect">dump =</span>
+                </h2>
+                <div id="accordion-collapse-body-3" class="hidden" aria-labelledby="accordion-collapse-heading-3">
+                    <pre id="dump-text-element" class="rounded-lg overflow-x-auto ">
 {{dump}}</pre>
+                </div>
             </div>
-        </div>
-        <div id="dump-empty-tag" class="hidden mb-4 bg-dark-gray p-4 rounded-lg">dump = ""
-            <span class="grey"> /* nothing returned */</span>
+            <div id="dump-empty-tag" class="hidden mb-4 bg-dark-gray p-4 rounded-lg">dump = ""
+                <span class="grey"> /* nothing returned */</span>
+            </div>
         </div>
     </div>
 
